@@ -31,13 +31,18 @@ class plgSystemDebug extends JPlugin
 	{
 		parent::__construct($subject, $config);
 
+		// Only if debugging is enabled
+		if (JDEBUG) {
+			ob_start();
+			ob_implicit_flush(false);
+		}
 	}
 
 	/**
-	* Converting the site URL to fit to the HTTP request
+	* Show the debug info
 	*
 	*/
-	function onAfterRender()
+	function __destruct()
 	{
 		global $_PROFILER;
 
@@ -46,11 +51,22 @@ class plgSystemDebug extends JPlugin
 			return;
 		}
 
+		// Capture output
+		$contents = ob_get_contents();
+		ob_end_clean();
+
+		// No debug for Safari and Chrome redirection
+		if (strstr(strtolower($_SERVER['HTTP_USER_AGENT']), 'webkit') !== false && substr($contents, 0, 50) == '<html><head><meta http-equiv="refresh" content="0;') {
+			echo $contents;
+			return;
+		}
+
 		$document	= JFactory::getDocument();
 		$doctype	= $document->getType();
 
 		// Only render for HTML output
 		if ($doctype !== 'html') {
+			echo $contents;
 			return;
 		}
 
@@ -59,9 +75,13 @@ class plgSystemDebug extends JPlugin
 		if (!empty($filterGroups)) {
 			$userGroups = JFactory::getUser()->get('groups');
 			if (!array_intersect($filterGroups, array_keys($userGroups))) {
+				echo $contents;
 				return;
 			}
 		}
+
+		// Load language file
+		$this->loadLanguage('plg_system_debug');
 
 		$profiler	= &$_PROFILER;
 
@@ -106,12 +126,15 @@ class plgSystemDebug extends JPlugin
 					// Start Query Type Ticker Additions
 					$fromStart = stripos($sql, 'from');
 					$whereStart = stripos($sql, 'where', $fromStart);
+
 					if ($whereStart === false) {
 						$whereStart = stripos($sql, 'order by', $fromStart);
 					}
+
 					if ($whereStart === false) {
 						$whereStart = strlen($sql) - 1;
 					}
+
 					$fromString = substr($sql, 0, $whereStart);
 					$fromString = str_replace("\t", " ", $fromString);
 					$fromString = str_replace("\n", " ", $fromString);
@@ -121,24 +144,27 @@ class plgSystemDebug extends JPlugin
 					if (!isset($selectQueryTypeTicker[$fromString])) {
 						$selectQueryTypeTicker[$fromString] = 0;
 					}
+
 					if (!isset($otherQueryTypeTicker[$fromString])) {
 						$otherQueryTypeTicker[$fromString] = 0;
 					}
+
 					// Increment the count:
 					if (stripos($sql, 'select') === 0) {
 						$selectQueryTypeTicker[$fromString] = $selectQueryTypeTicker[$fromString] + 1;
 						unset($otherQueryTypeTicker[$fromString]);
-					} else {
+					}
+					else {
 						$otherQueryTypeTicker[$fromString] = $otherQueryTypeTicker[$fromString] + 1;
 						unset($selectQueryTypeTicker[$fromString]);
 					}
 					// Finish Query Type Ticker Additions
 
-
 					$text = htmlspecialchars($sql, ENT_QUOTES);
 					$text = preg_replace($newlineKeywords, '<br />&#160;&#160;\\0', $text);
 					echo '<li>'.$text.'</li>';
 				}
+
 				echo '</ol>';
 
 				if ($this->params->get('query_types', 1)) {
@@ -153,9 +179,12 @@ class plgSystemDebug extends JPlugin
 						echo '<h5>'.JText::sprintf('PLG_DEBUG_SELECT_QUERIES').'</h5>';
 						arsort($selectQueryTypeTicker);
 						echo '<ol>';
-						foreach($selectQueryTypeTicker as $table => $occurrences) {
+
+						foreach($selectQueryTypeTicker as $table => $occurrences)
+						{
 							echo '<li>'.JText::sprintf('PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES', $table, $occurrences).'</li>';
 						}
+
 						echo '</ol>';
 					}
 
@@ -163,7 +192,9 @@ class plgSystemDebug extends JPlugin
 						echo '<h5>'.JText::sprintf('PLG_DEBUG_OTHER_QUERIES').'</h5>';
 						arsort($otherQueryTypeTicker);
 						echo '<ol>';
-						foreach($otherQueryTypeTicker as $table => $occurrences) {
+
+						foreach($otherQueryTypeTicker as $table => $occurrences)
+						{
 							echo '<li>'.JText::sprintf('PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES', $table, $occurrences).'</li>';
 						}
 						echo '</ol>';
@@ -171,67 +202,78 @@ class plgSystemDebug extends JPlugin
 				}
 			}
 		}
-		
+
 		// Show language debug only if enabled
-		if (JFactory::getApplication()->getCfg('debug_lang'))
-		{
+		if (JFactory::getApplication()->getCfg('debug_lang')) {
 			$lang = JFactory::getLanguage();
+
 			if ($this->params->get('language_errorfiles', 1)) {
 				echo '<h4>'.JText::_('PLG_DEBUG_LANGUAGE_FILES_IN_ERROR').'</h4>';
 				$errorfiles = $lang->getErrorFiles();
+
 				if (count($errorfiles)) {
 					echo '<ul>';
-					foreach ($errorfiles as $file => $error) {
+
+					foreach ($errorfiles as $file => $error)
+					{
 						echo "<li>$error</li>";
 					}
 					echo '</ul>';
-				} else {
+				}
+				else {
 					echo '<pre>'.JText::_('JNONE').'</pre>';
 				}
 			}
-	
+
 			if ($this->params->get('language_files', 1)) {
 				echo '<h4>'.JText::_('PLG_DEBUG_LANGUAGE_FILES_LOADED').'</h4>';
 				echo '<ul>';
 				$extensions	= $lang->getPaths();
-				foreach ($extensions as $extension => $files) {
-					foreach ($files as $file => $status) {
+
+				foreach ($extensions as $extension => $files)
+				{
+					foreach ($files as $file => $status)
+					{
 						echo "<li>$file $status</li>";
 					}
 				}
 				echo '</ul>';
 			}
-	
+
 			if ($this->params->get('language_strings')) {
 				$stripFirst	= $this->params->get('strip-first');
 				$stripPref	= $this->params->get('strip-prefix');
 				$stripSuff	= $this->params->get('strip-suffix');
-	
+
 				echo '<h4>'.JText::_('PLG_DEBUG_UNTRANSLATED_STRINGS').'</h4>';
 				echo '<pre>';
 				$orphans = $lang->getOrphans();
+
 				if (count($orphans)) {
 					ksort($orphans, SORT_STRING);
 					$guesses = array();
-	
-					foreach ($orphans as $key => $occurance) {
-	
+
+					foreach ($orphans as $key => $occurance)
+					{
 						if (is_array($occurance) AND isset($occurance[0])) {
 							$info = &$occurance[0];
 							$file = @$info['file'];
+
 							if (!isset($guesses[$file])) {
 								$guesses[$file] = array();
 							}
-	
+
 							// Prepare the key
-	
+
 							if (($pos = strpos($info['string'], '=')) > 0) {
 								$parts	= explode('=', $info['string']);
 								$key	= $parts[0];
 								$guess	= $parts[1];
-	
-							} else {
+
+							}
+							else {
 								$guess = str_replace('_', ' ', $info['string']);
+
 								if ($stripFirst) {
 									$parts = explode(' ', $guess);
 									if (count($parts) > 1) {
@@ -239,45 +281,46 @@ class plgSystemDebug extends JPlugin
 										$guess = implode(' ', $parts);
 									}
 								}
-	
+
 								$guess = trim($guess);
-	
+
 								if ($stripPref) {
 									$guess = trim(preg_replace(chr(1).'^'.$stripPref.chr(1).'i', '', $guess));
 								}
-	
+
 								if ($stripSuff) {
 									$guess = trim(preg_replace(chr(1).$stripSuff.'$'.chr(1).'i', '', $guess));
 								}
 							}
-	
+
 							$key = trim(strtoupper($key));
 							$key = preg_replace('#\s+#', '_', $key);
 							$key = preg_replace('#\W#', '', $key);
-	
+
 							// Prepare the text
-	
 							$guesses[$file][] = $key.'="'.$guess.'"';
 						}
 					}
-	
-					foreach ($guesses as $file => $keys) {
+
+					foreach ($guesses as $file => $keys)
+					{
 						echo "\n\n# ".($file ? $file : JText::_('PLG_DEBUG_UNKNOWN_FILE'))."\n\n";
 						echo implode("\n", $keys);
 					}
-				} else {
+				}
+				else {
 					echo JText::_('JNONE');
 				}
 				echo '</pre>';
 			}
 		}
-		
+
 		echo '</div>';
 
 		$debug = ob_get_clean();
 
 		$body = JResponse::getBody();
 		$body = str_replace('</body>', $debug.'</body>', $body);
-		JResponse::setBody($body);
+		echo str_replace('</body>', $debug.'</body>', $contents);
 	}
 }
